--- a/lab-1/index.html
+++ b/lab-1/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="css/main.css">
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
@@ -6,7 +7,13 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Lab 1</h1>
+    <h1>Jakub Dziektarz</h1>
+    <a href="login.html">Logowanie</a>
+    <br /> 
+    <a href="konkurs.html">Konkurs almette</a>
+    <br /> 
+    <a href="uwagi.html">Uwagi</a>
+    <br />
     <a href="..">Powrót</a>
   </body>
 </html>
