--- a/lab-1/konkurs.html
+++ b/lab-1/konkurs.html
@@ -55,7 +55,7 @@
 
         <div class="field">
           <label for="Works" class="contest-label">Liczba zgłaszanych prac (od 1 do 6):</label>
-          <input id="Works" name="Works" class="control" type="number" inputmode="numeric" min="1" max="6" step="1" required />
+          <input id="Works" name="Works" class="control" type="number" inputmode="numeric" min="1" max="6" required />
         </div>
 
         <div class="field">
@@ -80,7 +80,7 @@
             <label for="pub-yes">Tak</label>
           </div>
           <div class="option">
-            <input type="radio" id="pub-no" name="Publish" value="Nie" required>
+            <input type="radio" id="pub-no" name="Publish" value="Nie" >
             <label for="pub-no">Nie</label>
           </div>
         </fieldset>
