--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -5,8 +5,186 @@
     <title>Lab 2</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <h1>Lab 2</h1>
-    <a href="..">Powrót</a>
-  </body>
+
+</html>
+
+
+<!doctype html>
+<html lang="pl">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<style>
+  /* --------- Styl ogólny i motyw --------- */
+  :root{
+    color-scheme: light;
+    --bg: #f7f8fb;
+    --card: #ffffff;
+    --text: #0f172a;
+    --muted: #5b6476;
+    --primary: #4f46e5;
+    --primary-weak: #eef2ff;
+    --ok: #16a34a;
+    --warn: #d97706;
+    --danger: #dc2626;
+    --border: #e5e7eb;
+    --shadow: 0 10px 30px rgba(2,6,23,.06);
+    --radius: 16px;
+  }
+  @media (prefers-color-scheme: dark){
+    :root{
+      color-scheme: dark;
+      --bg: #0b1020;
+      --card: #0f172a;
+      --text: #e5e7eb;
+      --muted: #a3aab8;
+      --primary: #818cf8;
+      --primary-weak: #111a3d;
+      --border: #253046;
+      --shadow: 0 10px 30px rgba(0,0,0,.4);
+    }
+  }
+
+  html,body{ height:100%; }
+  body{
+    margin:0;
+    background: var(--bg);
+    color: var(--text);
+    font: 16px/1.55 system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial, sans-serif;
+  }
+
+  .wrap{
+    max-width: 920px;
+    margin: clamp(20px, 4vw, 60px) auto;
+    padding: 0 16px 64px;
+  }
+
+  .hero{
+    background: linear-gradient(135deg, var(--primary-weak), transparent);
+    border: 1px solid var(--border);
+    border-radius: var(--radius);
+    box-shadow: var(--shadow);
+    padding: clamp(18px, 3.5vw, 32px);
+    display: grid;
+    gap: 12px;
+  }
+  .hero h1{
+    margin:0;
+    font-size: clamp(28px, 5vw, 40px);
+    line-height: 1.1;
+    letter-spacing: -0.015em;
+  }
+  .hero p{ margin:0; color: var(--muted); }
+
+  .card{
+    background: var(--card);
+    border: 1px solid var(--border);
+    border-radius: var(--radius);
+    box-shadow: var(--shadow);
+    padding: clamp(16px, 2.6vw, 24px);
+  }
+  .card h2{
+    margin: 0 0 10px;
+    font-size: clamp(20px, 3.3vw, 26px);
+    letter-spacing: -0.01em;
+  }
+  /* tabelka zalety/ograniczenia */
+  .table{
+    width: 100%;
+    border-collapse: collapse;
+    overflow: hidden;
+    border-radius: 12px;
+    border: 1px solid var(--border);
+  }
+  .table thead th{
+    text-align: left;
+    padding: 10px 12px;
+    background: var(--primary-weak);
+    border-bottom: 1px solid var(--border);
+  }
+  .table td{
+    padding: 10px 12px;
+    border-top: 1px solid var(--border);
+    vertical-align: top;
+  }
+
+  /* boxy statusów */
+  .pill{
+    display: inline-block;
+    align-items: left;
+    font-size: 12px;
+    background: var(--card);
+    color: var(--muted);
+  }
+  .ok{ color: var(--ok); border-color: color-mix(in oklab, var(--ok), transparent 60%); }
+  .warn{ color: var(--warn); border-color: color-mix(in oklab, var(--warn), transparent 60%); }
+  .bad{ color: var(--danger); border-color: color-mix(in oklab, var(--danger), transparent 60%); }
+
+  /* code */
+  code, pre{
+    font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace;
+    font-size: 0.95em;
+  }
+  pre{
+    background: color-mix(in oklab, var(--card), black 3%);
+    border: 1px solid var(--border);
+    border-radius: 12px;
+    padding: 12px 14px;
+    overflow: auto;
+  }
+
+</style>
+</head>
+<body>
+  <main class="wrap">
+    <header class="hero" role="banner" aria-label="Nagłówek strony">
+      <h1>Jakub Dziektarz</h1>
+    </header>
+
+    <section class="grid" aria-label="Główna treść">
+      <article class="card" aria-labelledby="zalety-ogr"><table class="table" role="table" aria-label="Tabela zalet i ograniczeń">
+    <thead>
+      <tr>
+        <th>Link</th>
+        <th>Opis</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+      <span class="pill ok"><a href="lab-2/flex.html">Flexbox</a></span>
+        </td>
+        <td>
+          Rozwiązane zadanie Lab-2 dot. Flexboxa
+        </td>
+      </tr>
+      <tr>
+        <td>
+      <span class="pill ok"><a href="lab-2/grid.html">Grid</a></span>
+        </td>
+        <td>
+         Rozwiązane zadanie Lab-2 dot. Grida
+        </td>
+      </tr>
+      <tr>
+        <td>
+      <span class="pill ok"><a href="lab-2/galeria.html">Galeria</a></span>
+        </td>
+        <td>
+           Rozwiązane zadanie Lab-2 dot. Galerii
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <span class="pill ok"><a href="..">Powrót</a></span>
+        </td>
+        <td>
+          Powrót do katalogu głównego 
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+  </main>
+</body>
 </html>
