--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -152,7 +152,7 @@
     <tbody>
       <tr>
         <td>
-      <span class="pill ok"><a href="lab-2/flex.html">Flexbox</a></span>
+      <span class="pill ok"><a href="flex.html">Flexbox</a></span>
         </td>
         <td>
           Rozwiązane zadanie Lab-2 dot. Flexboxa
@@ -160,7 +160,7 @@
       </tr>
       <tr>
         <td>
-      <span class="pill ok"><a href="lab-2/grid.html">Grid</a></span>
+      <span class="pill ok"><a href="grid.html">Grid</a></span>
         </td>
         <td>
          Rozwiązane zadanie Lab-2 dot. Grida
@@ -168,7 +168,7 @@
       </tr>
       <tr>
         <td>
-      <span class="pill ok"><a href="lab-2/galeria.html">Galeria</a></span>
+      <span class="pill ok"><a href="galeria.html">Galeria</a></span>
         </td>
         <td>
            Rozwiązane zadanie Lab-2 dot. Galerii
